# deadends.dev

./: .cursorrules  .gitignore  .mcp.json  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  server.json  smithery.yaml  vercel.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: new_error.yml  update_workaround.yml
.github/workflows/: build.yml  collect-github-signals.yml  update-evidence.yml
.well-known/: mcp-registry-auth
.well-known/mcp/: server-card.json
api/: mcp.py
archive/bulk_generate_history/: bulk_generate_v10.py  bulk_generate_v11.py  bulk_generate_v12.py  bulk_generate_v13.py  bulk_generate_v14.py  bulk_generate_v15.py  bulk_generate_v16.py  bulk_generate_v3.py  bulk_generate_v4.py  bulk_generate_v5.py  bulk_generate_v6.py  bulk_generate_v8.py  bulk_generate_v9.py
benchmarks/: error_scenarios.json  results.json  run_benchmark.py
data/: quality_report.json
data/canons/aws/: access-denied-s3_aws-cli2-linux.json  assume-role-unauthorized_awscli2-linux.json  cloudformation-rollback-complete_awscli2-linux.json  cloudwatch-log-group-exists_aws-cli2-linux.json  cognito-user-not-confirmed_aws-cli2-linux.json  dynamodb-provisioned-throughput-exceeded_awscli2-linux.json  ecr-login-required_awscli2-linux.json  ecs-service-unable-to-place_aws-cli2-linux.json  iam-policy-too-large_awscli2-linux.json  lambda-runtime-error_aws-cli2-linux.json  lambda-timeout_awscli2-linux.json  limit-exceeded_awscli2-linux.json  parameter-store-not-found_aws-cli2-linux.json  rds-connection-timeout_aws-cli2-linux.json  region-not-set_awscli2-linux.json  resource-already-exists_awscli2-linux.json  s3-access-denied_awscli2-linux.json  s3-nosuchbucket_aws-cli2-linux.json  secrets-manager-not-found_aws-cli2-linux.json  service-unavailable_awscli2-linux.json  sqs-message-too-large_aws-cli2-linux.json  sts-access-denied_aws-cli2-linux.json  validation-exception_awscli2-linux.json
data/canons/cuda/: all-cuda-capable-devices-busy_cuda12-linux.json  cuda-capability-error_cuda12-rtx4090.json  cuda-driver-insufficient_cuda12-linux.json  cuda-initialization-error_cuda12-a100.json  cuda-lazy-loading_cuda12-rtx4090.json  cudnn-not-compiled-with-support_cuda12-linux.json  cudnn-version-mismatch_cuda12-a100.json  cusolver-internal-error_cuda12-a100.json  device-side-assert_cuda12-linux.json  illegal-memory-access_cuda12-linux.json  nccl-unhandled-system-error_torch2.1-multi-gpu.json  no-kernel-image-for-device_cuda12-linux.json  nvcc-not-found_cuda12-linux.json  torch-cuda-oom-new_torch2-a100.json
data/canons/docker/: bind-address-already-in-use_docker24-linux.json  build-arg-not-set_docker24-linux.json  build-arg-not-set_docker27-linux.json  cannot-stop-container_docker24-linux.json  compose-service-depends-on_docker27-linux.json  compose-version-obsolete_docker27-linux.json  container-already-in-use_docker27-linux.json  container-unhealthy_docker24-linux.json  context-canceled_docker24-linux.json  copy-failed-stat_docker24-linux.json  copy-failed-stat_docker27-linux.json  dns-resolution-failed_docker27-linux.json  entrypoint-not-found_docker27-linux.json  (+20 more)
data/graph/: README.md  edges.jsonl  stats.json
data/signatures/: README.md  index.jsonl  stats.json
docs/: GITHUB_DATA_COLLECTION_STRATEGY.md  PYPI_RELEASE_MANUAL.md  SEO_OPERATIONS_GUIDE.md  SEO_REFERENCE.md  country-canon-guide.md
generator/: analytics.py  build_graph.py  build_signatures.py  build_site.py  bulk_generate.py  bulk_generate_v2.py  bulk_generate_v7.py  collect_evidence.py  collect_signatures.py  country_canon_template.py  country_metadata.py  domains.py  generate_canons.py  generate_pairs.py  lookup.py  ping_search_engines.py  pipeline.py  process_outcomes.py  quality_report.py  schema.py  submit_indexnow.py  validate.py
generator/templates/: _macros.html  about.html  country.html  country_hub.html  dashboard.html  domain.html  error_summary.html  index.html  page.html  search.html
mcp/: server.py
scripts/: collect_github_signals.py
tests/: conftest.py  test_analytics.py  test_api_mcp.py  test_benchmark.py  test_build.py  test_build_graph.py  test_build_integration.py  test_build_signatures.py  test_country_canon.py  test_country_seo.py  test_enhanced_search.py  test_lookup_regex_cache.py  test_mcp_server.py  test_pipeline.py  test_process_outcomes.py  test_quality_report.py  test_report_outcome.py  test_schema.py  test_validate.py
(+2351 files in other folders)
