[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deadends-dev"
version = "0.9.0"
description = "Structured failure knowledge for AI agents — dead ends, workarounds, error chains"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YuJin Hong"}
]
readme = "README.md"
keywords = [
    "error", "debugging", "dead-end", "workaround", "ai-agent",
    "mcp", "error-handling", "troubleshooting",
    "culture", "safety", "medical", "legal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jinja2>=3.1.6,<4",
]

[project.urls]
Homepage = "https://deadends.dev"
Repository = "https://github.com/dbwls99706/deadends.dev"
Source = "https://github.com/dbwls99706/deadends.dev"
Issues = "https://github.com/dbwls99706/deadends.dev/issues"
Changelog = "https://github.com/dbwls99706/deadends.dev/blob/main/README.md#changelog"
API = "https://deadends.dev/api/v1/index.json"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "ruff>=0.4,<1",
    "jsonschema>=4.20,<5",
]
mcp = [
    "jsonschema>=4.20,<5",
]
pipeline = [
    "jsonschema>=4.20,<5",
    "requests>=2.31,<3",
    "anthropic>=0.25,<2",
]

[project.scripts]
deadends = "generator.lookup:main"
deadends-mcp = "mcp.server:main"
deadends-dev = "mcp.server:main"

[tool.setuptools.packages.find]
include = ["generator*", "mcp*", "data*"]

[tool.setuptools.package-data]
data = ["canons/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["generator/bulk_generate*.py", "archive/", "api/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
